<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/bodyBG"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/salon_bg_login"
    tools:context=".UpdateUserInfo">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D3000000" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="110dp"
        tools:layout_editor_absoluteY="196dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aldrich"
                    android:text="@string/update_info"
                    android:textAlignment="center"
                    android:textColor="#E91E63"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!--Full Name-->
            <TextView
                android:id="@+id/fullNameTextViewId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/full_name_req"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/fullNameEditTextId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fullNameTextViewId"
                android:layout_marginTop="5dp"
                android:background="@drawable/border"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textSize="16sp" />

            <!--Email-->
            <TextView
                android:id="@+id/emailTextViewId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fullNameEditTextId"
                android:layout_marginTop="30dp"
                android:text="@string/email_req"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/emailEditTextId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailTextViewId"
                android:layout_marginTop="5dp"
                android:background="@drawable/border"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textSize="16sp" />
            <!-- android:enabled="false"-->
            <TextView
                android:id="@+id/canNotChangeEmailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/can_t_change_email_address"
                android:layout_below="@+id/emailEditTextId"
                android:textAlignment="center"
                android:textColor="#D0ECE079"/>

            <!--Date of Birth-->
            <TextView
                android:id="@+id/birthDateTextViewId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/canNotChangeEmailId"
                android:layout_marginTop="30dp"
                android:text="@string/date_of_birth_dd_mm_yyyy"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/birthDateEditTextId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/birthDateTextViewId"
                android:layout_marginTop="5dp"
                android:background="@drawable/border"
                android:drawableEnd="@drawable/ic_baseline_calendar_month_24"
                android:hint="@string/dd_mm_yyyy"
                android:inputType="date"
                android:padding="10dp"
                android:textSize="16sp"
                tools:ignore="Autofill" />

            <!--Mobile-->
            <TextView
                android:id="@+id/mobileTextViewId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/birthDateEditTextId"
                android:layout_marginTop="30dp"
                android:text="@string/mobile_88"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/mobileEditTextId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mobileTextViewId"
                android:layout_marginTop="5dp"
                android:background="@drawable/border"
                android:hint="@string/enter_your_mobile_number"
                android:inputType="phone"
                android:maxLength="11"
                android:padding="10dp"
                android:textSize="16sp" />

            <!--Gender-->
            <TextView
                android:id="@+id/textView_register_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mobileEditTextId"
                android:layout_marginTop="30dp"
                android:text="@string/gender_req"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/radioGroupId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_register_gender"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male"
                    android:id="@+id/maleId"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"
                    android:id="@+id/femaleId"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </RadioGroup>


            <Button
                android:id="@+id/updateButtonId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioGroupId"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="false"
                android:layout_marginTop="30dp"
                android:text="@string/save" />

            <ProgressBar
                android:id="@+id/progressBarId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="gone" />


        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>