<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/bodyBG"
    android:gravity="center"
    tools:context=".VerifyEmail"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp">

    <TextView
        android:id="@+id/yourEmailId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/textViewId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/verify_msg"
        android:textAlignment="center"
        android:textStyle="italic"/>
    <Button
        android:id="@+id/openEmailId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_email"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_again"
        android:id="@+id/loginAgainId"/>

</LinearLayout>